--- a/src/components/SearchBar/SearchBar.css
+++ b/src/components/SearchBar/SearchBar.css
@@ -2,20 +2,24 @@
   border-bottom: 1px solid #3333;
   height: 60px;
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
   background: #ffffff;
 }
 .search-form {
   width: 150px;
   font-size: 14px;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 .search-form input {
   text-align: center;
   color: #262626;
 }
 .image-wrapper {
-  height: 50px;
+  height: 50%;
+  padding-left: 2%;
+  padding-right: 1%;
 }
 
 .logo-image {
@@ -24,6 +28,8 @@
 
 .social-wrapper {
   display: flex;
+  padding-left: 2%;
+  padding-right: 2%;
 }
 
 .social {
